# ai-healthcare-plan

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_SETUP.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  MOCK_DATA_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SENTRY_SETUP.md  TESTING.md
.claude/: MCP_SETUP.md  settings.local.json
.github/: SNYK_SETUP.md  pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  TESTING.md  pyproject.toml  render.yaml  requirements.txt  test_backend.bat  test_backend.sh  test_data.json
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/services/: __init__.py  care_plan_service.py  claude_client.py
backend/app/utils/: logger.py
backend/tests/: conftest.py  test_api.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: CarePlanDisplay.tsx  PatientForm.old.tsx  PatientForm.tsx  SearchableSelect.tsx
frontend/src/data/: mockPatients.ts  presets.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
