[project]
name = "care-plan-generator-backend"
version = "1.0.0"
description = "FastAPI backend for AI-powered care plan generation"
requires-python = ">=3.11"

[tool.ruff]
# Set line length to 100
line-length = 100

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "ENV",
    "env",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable pycodestyle (E) and Pyflakes (F) rules
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "ISC", "ICN", "G", "PIE", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "PD", "PL", "TRY", "NPY", "RUF"]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by line-length)
    "G004",    # Logging statement uses f-string (prefer f-strings for readability)
    "TRY300",  # Consider moving to else block (stylistic)
    "TRY400",  # Use logging.exception (stylistic)
    "TRY003",  # Long messages outside exception class (too strict)
    "ARG001",  # Unused function argument (FastAPI requires some unused args)
    "B904",    # Raise without from clause (not always needed)
    "DTZ003",  # datetime.utcnow() usage (acceptable for ISO timestamps)
    "EM101",   # Exception must not use string literal (too strict)
    "EM102",   # Exception must not use f-string literal (too strict)
    "RUF012",  # Mutable default for class attribute (Pydantic Config is fine)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
